final-exam.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: final-exam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: final-exam
  template:
    metadata:
      labels:
        app: final-exam
    spec:
      containers:
      - name: final-exam-container
        image: nvrbckdown/flask-app:final-exam
        ports:
        - containerPort: 80
