flask-application-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: flask-application
  name: flask-application
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-application
  strategy: {}
  template:
    metadata:
      labels:
        app: flask-application
    spec:
      containers:
      - image: nvrbckdown/flask-app:last-practice
        name: flask-app
        resources:
          requests:
            memory: "64Mi"
            cpu: "75m"
          limits:
            memory: "128Mi"
            cpu: "150m"
