nginx1.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    last: final
  name: nginx1
spec:
  containers:
  - image: nginx:latest
    name: nginx1
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
