final-exam-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: final-exam
spec:
  ingressClassName: nginx
  rules:
  - host: b.bkm.uz
    http:
      paths:
      - backend:
          service:
            name: final-exam
            port:
              number: 80
        path: /check-ingress
        pathType: Prefix
status:
  loadBalancer: {}
