network-polic.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy
  namespace: alisher
spec:
  podSelector:
    matchLabels:
      app: flask-application
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kuber=admin
    - podSelector:
        matchLabels:
          role: flask-application
